# azure-sql-agentic

./: README.md  agents.py  check-db-credentials.ps1  deploy.ps1  main.bicep  main.py  pyproject.toml
